--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container" th:fragment="header">
-    <div class="navbar navbar-default">
+    <nav class="navbar navbar-default">
         <div class="container">
 
             <div class="navbar-header">
@@ -34,7 +34,7 @@
             </div>
 
         </div>
-    </div>
+    </nav>
 </div>
 
 </body>
