New entities and relations to them.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,10 @@
                         <a href="#" th:href="@{/}">Home</a>
                     </li>
                     <li>
-                        <a href="#" th:href="@{/samples}">Samples</a>
+                        <a href="#" th:href="@{/samples/}">
+                            Samples
+                            <span class="badge">5</span>
+                        </a>
                     </li>
                     <li>
                         <a href="#" th:href="@{/task}">Tasks</a>
