--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head id="headerFragment" th:fragment="head">
-    <link rel="stylesheet" href="/webjars/bootstrap/3.3.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/css/main.css}" />
 
-    <script type="application/javascript" src="/webjars/jquery/2.1.3/jquery.min.js"></script>
-    <script type="application/javascript" src="/webjars/bootstrap/3.3.2/js/bootstrap.min.js" ></script>
+    <script type="application/javascript" th:src="@{/webjars/jquery/2.1.3/jquery.min.js}"></script>
+    <script type="application/javascript" th:src="@{/webjars/bootstrap/3.3.2/js/bootstrap.min.js}" ></script>
 
     <script type="application/javascript" th:src="@{/js/main.js}" ></script>
 </head>
