--- a/src/main/resources/templates/samples/create.html
+++ b/src/main/resources/templates/samples/create.html
@@ -5,6 +5,8 @@
 
 <div th:replace="fragments/header :: header">...</div>
 
+<!--@thymesVar id="type" type="uk.ac.sanger.mig.aker.domain.Type"-->
+
 <div class="container">
 
     <div class="page-header">
@@ -19,6 +21,12 @@
                    class="form-control" th:field="*{amount}"/>
         </div>
 
+        <div class="alert alert-danger" th:if="${#fields.hasErrors('amount')}">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <strong>Validation Errors</strong>
+            <p th:errors="*{amount}"></p>
+        </div>
+
         <div class="form-group">
             <label for="type">Of Type</label>
             <select id="type" class="form-control" th:field="*{type}">
@@ -27,9 +35,17 @@
             </select>
         </div>
 
+        <div class="alert alert-danger" th:if="${#fields.hasErrors('type')}">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <strong>Validation Errors</strong>
+            <p th:errors="*{type}"></p>
+        </div>
+
         <button type="submit" class="btn btn-primary">Request</button>
     </form>
 </div>
+
+<div th:include="fragments/common :: foot"></div>
 
 </body>
 </html>
