--- a/src/main/resources/templates/samples/index.html
+++ b/src/main/resources/templates/samples/index.html
@@ -19,82 +19,166 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-8">
-            <!--@thymesVar id="samples" type="List<Sample>"-->
-            <!--@thymesVar id="sample" type="Sample"-->
-            <table class="table table-striped" id="jqp-samples">
-                <tr>
-                    <th>
-                        #
-                    </th>
-                    <th>
-                        Barcode
-                    </th>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Labels
-                    </th>
-                    <th>
-                        Type name
-                    </th>
-                    <th>
-                        Status
-                    </th>
-                    <th>
+    <form th:action="@{/samples/group/}" th:object="${group}" method="POST" role="form">
 
-                    </th>
-                </tr>
-                <tr class="jqp-append-before">
-                </tr>
-                <tr>
-                    <td colspan="7" class="text-center">
-                        <a href="#" class="btn btn-default jqp-load-more">
-                            Load More Samples...
-                        </a>
-                    </td>
-                </tr>
-            </table>
+        <div class="row">
+            <div class="col-md-8">
+                <table class="table table-condensed table-hover table-selectable" id="jqp-samples">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th>
+                            Barcode
+                        </th>
+                        <th>
+                            Main Label
+                        </th>
+                        <th>
+                            Labels
+                        </th>
+                        <th>
+                            Type
+                        </th>
+                        <th>
+                            Status
+                        </th>
+                        <th>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr id="jqp-append-before-samples">
+                        <td colspan="7" class="text-center">
+                            <a href="#" class="btn btn-default" id="jqp-load-more-samples">
+                                Load More Samples...
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-md-2">
+                <h5>
+                    Actions
+                </h5>
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="active">
+                        <button type="submit" class="btn btn-primary" id="create-group">Create Group</button>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-2">
+                <h5>
+                    Nav
+                </h5>
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Messages</a></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="col-md-2">
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Messages</a></li>
-            </ul>
+        <!-- Modal -->
+        <div class="modal fade" id="groupModal" tabindex="-1" role="dialog" aria-labelledby="groupModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="groupModalLabel">Create Sample Group</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <h3>Selected Samples</h3>
+
+                        <div class="create-group-modal">
+                            <table class="table table-condensed table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Barcode</th>
+                                    <th>Main Label</th>
+                                    <th>Type</th>
+                                    <th>Status</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="groupName">Group Name</label>
+                            <input type="text" id="groupName" class="form-control" required="required"
+                                   th:field="*{name}" />
+                        </div>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="modalConfirm">Confirm Group</button>
+                    </div>
+
+                </div>
+            </div>
         </div>
-    </div>
+
+    </form>
 </div>
 
 <script id="sample-template" type="text/x-handlebars-template">
-    <tr>
+    <tr id="{{barcode}}">
         <td>
-            {{ id }}
+            <input type="checkbox" value="{{barcode}}" name="samples[{{id}}].barcode"/>
         </td>
-        <td>
+        <td class="barcode">
             <a href="/samples/show/{{ barcode }}">
                 {{ barcode }}
             </a>
         </td>
-        <td>
+        <td class="name">
+            {{ mainLabel.name }}
+        </td>
+        <td class="labels">
+            {{#list labels}}
             {{ name }}
+            {{/list}}
         </td>
-        <td>
-
-        </td>
-        <td>
+        <td class="type">
             {{ type.name }}
         </td>
-        <td>
+        <td class="status">
             {{ status.value }}
         </td>
         <td>
-            <a href="/samples/show/{{ barcode }}/add-label" class="btn btn-primary">
-                Add Label
+            <a href="/samples/show/{{ barcode }}">
+                view
             </a>
+        </td>
+    </tr>
+</script>
+
+<script id="modal-sample-template" type="text/x-handlebars-template">
+    <tr>
+        <td class="barcode">
+            <a href="/samples/show/{{ barcode }}">
+                {{ barcode }}
+            </a>
+        </td>
+        <td class="name">
+            {{ name }}
+        </td>
+        <td class="type">
+            {{ type }}
+        </td>
+        <td class="status">
+            {{ status }}
         </td>
     </tr>
 </script>
