Create Groups functional Show Group page Groups index

--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -3,6 +3,8 @@
 <head id="headerFragment" th:fragment="head">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/css/main.css}" />
+
+    <title>Aker</title>
 </head>
 <body>
 
