--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head id="headerFragment" th:fragment="head">
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
 
     <title>Aker</title>
 </head>
 <body>
 
-<div th:fragment="foot">
-    <script type="application/javascript" th:src="@{/webjars/jquery/2.1.3/jquery.min.js}"></script>
-    <script type="application/javascript" th:src="@{/webjars/bootstrap/3.3.2/js/bootstrap.min.js}" ></script>
-    <script type="application/javascript" th:src="@{/webjars/handlebars/3.0.0/handlebars.js}" ></script>
+<div class="container" th:fragment="header">
+    <nav class="navbar navbar-default">
 
-    <script type="application/javascript" th:src="@{/js/main.js}" ></script>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Aker</a>
+        </div>
+
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav" th:with="uri = ${#httpServletRequest.requestURI}">
+
+                <li th:classappend="${uri == '/'} ? active ">
+                    <a th:href="@{/}">Home</a>
+                </li>
+                <li th:classappend="${uri.startsWith('/samples/')} ? active ">
+                    <a th:href="@{/samples/}">
+                        Samples
+                    </a>
+                </li>
+                <li th:classappend="${uri.startsWith('/groups/')} ? active ">
+                    <a th:href="@{/groups/}">
+                        Groups
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+<div class="container" th:fragment="footer">
+
+    <script type="application/javascript" th:src="@{/webjars/jquery/2.1.3/jquery.min.js}"></script>
+    <script type="application/javascript" th:src="@{/webjars/bootstrap/3.3.2/js/bootstrap.min.js}"></script>
+    <script type="application/javascript" th:src="@{/webjars/handlebars/3.0.0/handlebars.js}"></script>
+
+    <script type="application/javascript" th:src="@{/js/main.js}"></script>
 </div>
 
 </body>
