--- a/src/main/resources/templates/groups/index.html
+++ b/src/main/resources/templates/groups/index.html
@@ -3,7 +3,7 @@
 <head lang="en" th:include="fragments/common :: head"></head>
 <body>
 
-<div th:replace="fragments/header :: header">...</div>
+<div th:replace="fragments/common :: header">...</div>
 
 <div class="container">
 
@@ -12,70 +12,176 @@
             Groups
         </h2>
     </div>
+    <form th:action="@{/groups/group/}" th:object="${groupRequest}" method="POST" role="form">
 
-    <table class="table table-striped table-condensed" id="jqp-groups">
-        <tr>
-            <th>
+        <div class="row">
+            <div class="col-md-10">
+                <table class="table table-hover table-condensed table-selectable" id="jqp-groups">
+                    <tr>
+                        <th></th>
+                        <th>
+                            Name
+                        </th>
+                        <th>
+                            Parent
+                        </th>
+                        <th>
+                            Sample Count
+                    <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"
+                          title="Excluding children groups'"></span>
+                        </th>
+                        <th>
+                            Details
+                        </th>
+                    </tr>
+                    <tr id="jqp-append-before-groups">
+                        <td colspan="7" class="text-center">
+                            <a href="#" class="btn btn-default" id="jqp-load-more-groups">
+                                Load More Groups...
+                            </a>
+                        </td>
+                    </tr>
+                </table>
 
-            </th>
-            <th>
-                Name
-            </th>
-            <th>
-                Parent
-            </th>
-            <th>
-                Sample Count
-            </th>
-            <th>
-                Details
-            </th>
-        </tr>
-        <tr id="jqp-append-before-groups">
-            <td colspan="7" class="text-center">
-                <a href="#" class="btn btn-default" id="jqp-load-more-groups">
-                    Load More Groups...
-                </a>
-            </td>
-        </tr>
-    </table>
+                <script id="group-template" type="text/x-handlebars-template">
+                    <tr id="{{ id }}" class="selectable">
+                        <td>
+                            <input type="checkbox" value="{{ id }}" th:field="*{groups}"/>
+                        </td>
+                        <td class="name">
+                            <a href="/groups/show/{{ id }}">
+                                {{ name }}
+                            </a>
+                        </td>
+                        <td class="parent">
+                            {{ parent.name }}
+                        </td>
+                        <td class="count">
+                            {{ samples.length }}
+                        </td>
+                        <td>
+                            <a href="/groups/show/{{ id }}/">
+                                <span class="glyphicon glyphicon-eye-open"></span>
+                                View
+                            </a>
+                        </td>
+                    </tr>
+                </script>
+            </div>
 
-    <script id="group-template" type="text/x-handlebars-template">
-        <tr>
-            <td>
+            <div class="col-md-2">
+                <h5>
+                    Actions
+                </h5>
+                <button type="submit" class="btn btn-success btn-block" id="create-group" disabled="disabled">
+                    Create Group
+                </button>
+            </div>
 
-            </td>
-            <td>
-                {{ name }}
-            </td>
-            <td>
-                {{ parent.name }}
-            </td>
-            <td>
-                {{ samples.length }}
-            </td>
-            <td>
-                <a href="/groups/show/{{ id }}/">
-                    <span class="glyphicon glyphicon-eye-open"></span>
-                    View
-                </a>
-            </td>
-        </tr>
-    </script>
+            <!-- Modal -->
+            <div class="modal fade" id="groupModal" tabindex="-1" role="dialog" aria-labelledby="groupModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
 
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <h2 class="modal-title" id="groupModalLabel">Create Super Group</h2>
+                        </div>
+
+                        <div class="modal-body">
+                            <h4>Selected Groups</h4>
+
+                            <p>
+                                <span class="text-danger">Warning:</span> A group can only have one parent group, and thus if you have selected
+                                groups which already have a parent, it will be overriden.
+                            </p>
+
+                            <div class="create-group-modal">
+                                <table class="table table-condensed table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Current Parent</th>
+                                        <th>Sample Count</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="groupName">Group Name</label>
+                                <input type="text" id="groupName" class="form-control" required="required"
+                                       th:field="*{name}" />
+                            </div>
+
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary" id="modalConfirm">Confirm Group</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </form>
 </div>
 
+<script id="modal-group-template" type="text/x-handlebars-template">
+    <tr>
+        <td class="name">
+            <a href="/samples/show/{{ id }}">
+                {{ name }}
+            </a>
+        </td>
+        <td class="parent">
+            {{ parent }}
+        </td>
+        <td class="count">
+            {{ count }}
+        </td>
+    </tr>
+</script>
 
-<div th:include="fragments/common :: foot"></div>
+<div th:include="fragments/common :: footer"></div>
 
 <script type="application/javascript">
     $(document).ready(function () {
-        $('#jqp-groups').pager({
+
+        var $groups = $('#jqp-groups');
+
+        $groups.pager({
             url: '/groups/json/',
             template: '#group-template',
             loadButton: '#jqp-load-more-groups',
-            appendBefore: '#jqp-append-before-groups',
-            preload: true
+            appendBefore: '#jqp-append-before-groups'
+        });
+
+        $groups.selectableElement({
+            element: 'tbody .selectable'
+        });
+
+        $('#create-group').createGroup({
+            modal: '#groupModal',
+            confirm: '#modalConfirm',
+            mode: 'groups',
+            template: '#modal-group-template'
+        });
+
+        $groups.on('element.selected', function (event) {
+            var $button = $('#create-group');
+            if (event.count > 0) {
+                $button.removeAttr('disabled');
+            } else {
+                $button.attr('disabled', 'disabled');
+            }
         });
     });
 </script>
