--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -3,7 +3,7 @@
 <head lang="en" th:include="fragments/common :: head"></head>
 <body>
 
-<div th:replace="fragments/header :: header">...</div>
+<div th:replace="fragments/common :: header">...</div>
 
 <div class="container" th:object="${group}">
     <input type="hidden" name="id" id="groupId" th:value="*{id}"/>
@@ -21,27 +21,72 @@
         <p th:text="*{name}"></p>
     </div>
 
+    <div class="parent" th:if="*{parent != null}">
+        <h3>Parent Group</h3>
+
+        <p>
+            <a href="" th:text="*{parent.name}" th:href="@{/groups/show/{groupId}(groupId = *{parent.id})}">
+            </a>
+        </p>
+    </div>
+
+    <div class="children" th:if="*{children != null}">
+        <h3>Children Groups</h3>
+
+        <ul>
+            <li th:each="child : *{children}">
+                <a href="" th:text="${child.name}" th:href="@{/groups/show/{groupId}(groupId = ${child.id})}">
+                </a>
+            </li>
+        </ul>
+    </div>
+
     <div class="samples">
         <h3>Samples</h3>
 
-        <div th:replace="samples/table :: samplestable"></div>
+        <div th:if="*{!samples.isEmpty()}">
+            <h4 class="text-muted">
+                Samples from: <span th:text="*{name}"></span>
+            </h4>
+
+            <div th:include="samples/table :: table (*{'append-' + id}, *{'load-' + id}, *{'meta-' + id})"></div>
+        </div>
+
+        <div th:if="*{children != null}">
+            <div th:each="child : *{children}">
+                <h4 class="text-muted">
+                    Samples from: <span th:text="${child.name}"></span>
+                </h4>
+                <div th:include="samples/table :: table (${'append-' + child.id}, ${'load-' + child.id}, ${'meta-' + child.id})"></div>
+            </div>
+        </div>
     </div>
 
 </div>
 
-<div th:include="fragments/common :: foot"></div>
+<script th:replace="samples/table :: template"></script>
+
+<div th:include="fragments/common :: footer"></div>
 
 <script type="application/javascript">
     $(document).ready(function () {
-        $('#jqp-samples').pager({
-            url: '/samples/byGroup/' + $('#groupId').val() + '/json',
-            template: '#sample-template',
-            loadButton: '#jqp-load-more-samples',
-            appendBefore: '#jqp-append-before-samples',
-            metadata: '#jqp-metadata-samples'
+        $('.jqp-samples').each(function () {
+            var $this = $(this);
+
+            var id = $this.find('.jqp-append-before').attr('id');
+            id = id.split("-")[1];
+
+            $(this).pager({
+                url: '/samples/byGroup/' + id + '/json',
+                template: '#sample-template',
+                loadButton: '#load-' + id,
+                appendBefore: '#append-' + id,
+                metadata: '#meta-' + id
+            });
         });
     });
 </script>
+
 
 </body>
 </html>
