--- a/src/main/resources/templates/samples/table.html
+++ b/src/main/resources/templates/samples/table.html
@@ -6,38 +6,40 @@
 </head>
 <body>
 
-<div th:fragment="samplestable">
-    <div class="text-muted pull-right" id="jqp-metadata-samples">
+<div th:fragment="samplestable (appendBeforeId, loadMoreId, metadataId)">
+    <div th:fragment="table (appendBeforeId, loadMoreId, metadataId)">
+        <div class="text-muted pull-right jqp-metadata" th:id="${metadataId}">
+        </div>
+        <table class="table table-striped table-condensed jqp-samples">
+            <tr>
+                <th>
+                    Barcode
+                </th>
+                <th>
+                    Main Label
+                </th>
+                <th>
+                    Type name
+                </th>
+                <th>
+                    Status
+                </th>
+                <th>
+                </th>
+            </tr>
+            <tr class="jqp-append-before" th:id="${appendBeforeId}">
+            </tr>
+            <tr>
+                <td colspan="7" class="text-center">
+                    <a href="#" class="btn btn-default jqp-load-more" th:id="${loadMoreId}">
+                        Load More Samples...
+                    </a>
+                </td>
+            </tr>
+        </table>
     </div>
-    <table class="table table-striped table-condensed" id="jqp-samples">
-        <tr>
-            <th>
-                Barcode
-            </th>
-            <th>
-                Main Label
-            </th>
-            <th>
-                Type name
-            </th>
-            <th>
-                Status
-            </th>
-            <th>
-            </th>
-        </tr>
-        <tr id="jqp-append-before-samples">
-        </tr>
-        <tr>
-            <td colspan="7" class="text-center">
-                <a href="#" class="btn btn-default" id="jqp-load-more-samples">
-                    Load More Samples...
-                </a>
-            </td>
-        </tr>
-    </table>
 
-    <script id="sample-template" type="text/x-handlebars-template">
+    <script id="sample-template" type="text/x-handlebars-template" th:fragment="template">
         <tr>
             <td>
                 <a href="/samples/show/{{ barcode }}">
